Speed versus power

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav id="primary">
       <p>
-      <label for="amount">Power:</label>
+      <label for="amount">Speed:</label>
       <input type="text" id="amount" style="border:0; color:#f6931f; font-weight:bold; font-size: 1em" />
       </p>
 
