--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <header>
       <hgroup>
-        <h1><img src="http://www.pachube.com/images/ui/logo.png?201104081744" /></h1>
+        <h1><img src="http://pachube.com/images/logo.png?201106081744" /></h1>
       </hgroup>
     </header>
 
