--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="robots" content="noindex" />
-    <title>Pachube international Internet of Things Hack</title>
+    <title>Cosm international Internet of Things Hack</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script>
     <script type="text/javascript" src="javascripts/jquery.livequery.js?201204081744"></script>
-    <script type="text/javascript" src="javascripts/pachubehack.js?201204081744"></script>
-    <link type="text/css" rel="stylesheet" href="stylesheets/jquery-ui-1.8.11.custom.css?201204081744" />
-    <link type="text/css" rel="stylesheet" href="stylesheets/pachubehack.css?201204081744" />
+    <script type="text/javascript" src="javascripts/cosmhack.js?201208081744"></script>
+    <link type="text/css" rel="stylesheet" href="stylesheets/jquery-ui-1.8.11.custom.css?201208081744" />
+    <link type="text/css" rel="stylesheet" href="stylesheets/cosmhack.css?201208081744" />
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -43,7 +43,7 @@
 
     <header>
       <hgroup>
-        <h1><img src="http://d13nj05qmdn3m1.cloudfront.net/assets/logo.png" width="180px"/></h1>
+        <h1><img src="/pachubehack/stylesheets/pachubehack.css" width="180px"/></h1>
       </hgroup>
     </header>
 
