--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <header>
       <hgroup>
-        <h1><img src="/pachubehack/stylesheets/pachubehack.css" width="180px"/></h1>
+        <h1><img src="/pachubehack/images/emptyback_notag.png" width="180px"/></h1>
       </hgroup>
     </header>
 
