--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="robots" content="noindex" />
     <title>Cosm - Socket Server Firehose demo</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="javascripts/jquery.livequery.js?201204081744"></script>
-    <script type="text/javascript" src="javascripts/cosmhack.js?201208081744"></script>
+    <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
+    <script src="http://d23cj0cdvyoxg0.cloudfront.net/cosmjs-1.0.0.min.js"></script>
+    <script type="text/javascript" src="javascripts/cosmhack.js?201210151744"></script>
     <link type="text/css" rel="stylesheet" href="stylesheets/jquery-ui-1.8.11.custom.css?201208081744" />
     <link type="text/css" rel="stylesheet" href="stylesheets/cosmhack.css?201208081744" />
 
